--- a/src/main/resources/templates/kuangjia/shiyan.html
+++ b/src/main/resources/templates/kuangjia/shiyan.html
@@ -1,76 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
-		<meta name="renderer" content="webkit" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>实验中心 - 旅游大数据虚拟仿真实验教学平台</title>
-		<link rel="stylesheet" href="../../static/new/css/reset.css" />
-		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
-		<link rel="stylesheet" href="../../static/new/css/shiyan.css" />
-	</head>
-	<body>
-		<div class="layui-layout layui-layout-admin">
-			<div class="layui-header">
-				<div class="top-logo cl">
-					<img src="../../static/new/images/sctu_w.png" />
-					<p>旅游大数据虚拟仿真实验教学平台</p>
-					<span>实验中心</span>
-				</div>
-				<div class="top-link" th:if="${session.student} != null">
-					<span th:text="|欢迎你，${session.student.stuName} |"></span>
-					<a href="/logout">退出</a>
-				</div>
-<!--				<div class="top-link"><a href="/logout">退出登录</a></div>-->
-			</div>
-			<div class="layui-side layui-bg-black">
-				<div class="layui-side-scroll">
-					<ul class="layui-nav layui-nav-tree">
-						<li class="layui-nav-item">
-							<a href="/choose/course/list"><i class="layui-icon layui-icon-home"></i>首页</a>
-						</li>
-						<li class="layui-nav-item">
-							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
-							<dl class="layui-nav-child">
-								<dd><a class="to-url" data-url="/expmodel/kaoheModel" href="javascript:;">考核实验</a></dd>
-								<dd><a class="to-url" data-url="/expmodel/alltestModel" href="javascript:;">全部实验</a></dd>
-							</dl>
-						</li>
-						<li class="layui-nav-item">
-							<a class="to-url" data-url="/kaoshi/-1/toExamPageList"><i class="layui-icon layui-icon-survey"></i>理论测试</a>
-						</li>
-						<li class="layui-nav-item">
-							<a href="javascript:;"><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
-							<dl class="layui-nav-child">
-								<dd><a class="to-url" data-url="/grade/score" href="javascript:;">当前课程成绩</a></dd>
-								<dd><a class="to-url" data-url="/grade/score/old" href="javascript:;">往期课程成绩</a></dd>
-							</dl>
-						</li>
-						<li class="layui-nav-item">
-							<a class="to-url" data-url="/setinfo/jiesao"><i class="layui-icon layui-icon-read"></i>操作说明</a>
-						</li>
-						<li class="layui-nav-item">
-							<a class="to-url" data-url="/setinfo/aboutus"><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="layui-body">
-				<iframe src="about:blank" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
-			</div>
-		</div>
-		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
-		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
-		<script>
-			$(function () {
-				$('.to-url').click(function (e) {
-					e.preventDefault()
-					if ($(this).data('url')) {
-						$('#iframe').attr('src', $(this).data('url'))
-					}
-				})
-			})
-		</script>
-	</body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>实验中心 - 旅游大数据虚拟仿真实验教学平台</title>
+    <link rel="stylesheet" href="../../static/new/css/reset.css"/>
+    <link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css"/>
+    <link rel="stylesheet" href="../../static/new/css/shiyan.css"/>
+</head>
+<body>
+<div class="layui-layout layui-layout-admin">
+    <div class="layui-header">
+        <div class="top-logo cl">
+            <img src="../../static/new/images/sctu_w.png"/>
+            <p>旅游大数据虚拟仿真实验教学平台</p>
+            <span>实验中心</span>
+        </div>
+        <div class="top-link" th:if="${session.student} != null">
+            <span th:text="|欢迎你，${session.student.stuName} |"></span>
+            <a href="/logout">退出</a>
+        </div>
+        <!--				<div class="top-link"><a href="/logout">退出登录</a></div>-->
+    </div>
+    <div class="layui-side layui-bg-black">
+        <div class="layui-side-scroll">
+            <ul class="layui-nav layui-nav-tree">
+                <li class="layui-nav-item">
+                    <a href="/choose/course/list"><i class="layui-icon layui-icon-home"></i>首页</a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
+                    <dl class="layui-nav-child">
+                        <dd><a class="to-url" data-url="/expmodel/kaoheModel" href="javascript:;">考核实验</a></dd>
+                        <dd><a class="to-url" data-url="/expmodel/alltestModel" href="javascript:;">全部实验</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a class="to-url" data-url="/kaoshi/-1/toExamPageList"><i class="layui-icon layui-icon-survey"></i>理论测试</a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;"><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+                    <dl class="layui-nav-child">
+                        <dd><a class="to-url" data-url="/grade/score" href="javascript:;">当前课程成绩</a></dd>
+                        <dd><a class="to-url" data-url="/grade/studentlast" href="javascript:;">往期课程成绩</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a class="to-url" data-url="/setinfo/jiesao"><i class="layui-icon layui-icon-read"></i>操作说明</a>
+                </li>
+                <li class="layui-nav-item">
+                    <a class="to-url" data-url="/setinfo/aboutus"><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="layui-body">
+        <iframe src="about:blank" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
+    </div>
+</div>
+<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+<script>
+    $(function () {
+        $('.to-url').click(function (e) {
+            e.preventDefault()
+            if ($(this).data('url')) {
+                $('#iframe').attr('src', $(this).data('url'))
+            }
+        })
+    })
+</script>
+</body>
 </html>
