--- a/src/main/resources/templates/home_page/index.html
+++ b/src/main/resources/templates/home_page/index.html
@@ -123,11 +123,11 @@
 						<div class="title">教学成果</div>
 					</div>
 					<div class="recommend-slide">
-						<div th:each="expModel:${expModels}" class="slide">
+						<div th:each="effect:${effects}" class="slide">
 							<div class="recommend-item">
-								<a th:href="@{|/expmodel/homeExpDispatcher/${expModel.getM_id()}|}">
-									<img th:src="${expModel.getImageurl()}" />
-									<p th:text="${expModel.getM_name()}">教学成果展示</p>
+								<a th:href="@{|/learningfront/effectDetails/${effect.getId()}|}">
+									<img th:src="${effect.getEffect_imgurl()}" />
+									<p th:text="${effect.getEffect_name()}">教学成果展示</p>
 								</a>
 							</div>
 						</div>
