--- a/src/main/resources/templates/jichu/timePlan_management.html
+++ b/src/main/resources/templates/jichu/timePlan_management.html
@@ -5,12 +5,13 @@
 		<title>课程安排管理</title>
 		<meta name="renderer" content="webkit" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../../static/css/font.css" />
 		<link rel="stylesheet" href="../../static/css/layui.css" />
 		<link rel="stylesheet" href="../../static/css/xadmin.css" />
-		<script src="../../static/js/layui.js" charset="utf-8"></script>
-		<script type="text/javascript" src="../../static/js/xadmin.js"></script>
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+<!--		<script src="../../static/js/layui.js" charset="utf-8"></script>-->
+<!--		<script type="text/javascript" src="../../static/js/xadmin.js"></script>-->
 	</head>
 	<style>
 		.text-overflow {
@@ -52,6 +53,9 @@
 			width: 35%;
 			margin: 0;
 		}
+		#pager {
+			text-align: center;
+		}
 	</style>
 	<body>
 		<div class="layui-fluid">
@@ -59,7 +63,7 @@
 				<div class="layui-col-md12">
 					<div class="layui-card">
 						<div class="layui-card-body" style="margin-bottom: 3%;">
-							<form class="layui-form layui-col-space5" action="/arrangeclass/mhlist" method="post">
+							<form class="layui-form layui-col-space5" action="/arrangeclass/mhlist" method="get">
 								<ul>
 									<li style="margin-left: 3%;">
 										<div class="layui-form-item choice-box">
@@ -68,7 +72,7 @@
 												<select name="courseName" lay-filter="aihao">
 													<option value="">请选择课程</option>
 													<a th:each="courseInfo:${courseInfoList}">
-														<option th:value="${courseInfo.getCourseName()}">[[${courseInfo.courseName}]]</option>
+														<option th:selected="${courseInfo.getCourseName()}==${courseName}" th:value="${courseInfo.getCourseName()}">[[${courseInfo.courseName}]]</option>
 													</a>
 												</select>
 											</div>
@@ -81,7 +85,7 @@
 												<select name="teacherName" lay-filter="aihao">
 													<option value="">请选择教师</option>
 													<a th:each="user:${userList}">
-														<option th:value="${user.getNickname()}">[[${user.nickname}]]</option>
+														<option th:selected="${user.getNickname()}==${teacherName}" th:value="${user.getNickname()}">[[${user.nickname}]]</option>
 													</a>
 												</select>
 											</div>
@@ -94,7 +98,7 @@
 												<select name="className" lay-filter="aihao">
 													<option value="">请选择班级</option>
 													<a th:each="class:${classList}">
-														<option th:value="${class.getClassName()}">[[${class.className}]]</option>
+														<option th:selected="${class.getClassName()}==${className}" th:value="${class.getClassName()}">[[${class.className}]]</option>
 													</a>
 												</select>
 											</div>
@@ -147,30 +151,61 @@
 								</tbody>
 							</table>
 						</div>
-						<div class="layui-card-body">
-							<div style="margin: 0 auto; width: 80%; text-align: center;">
-								<p>当前 <span th:text="${ArrangeClassDto.number}+1"></span> 页, 总 <span th:text="${ArrangeClassDto.totalPages}"></span> 页, 共 <span th:text="${ArrangeClassDto.totalElements}"></span> 条记录</p>
-								<a th:href="@{/arrangeclass/list}">首页</a>
-								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasPrevious()}?${ArrangeClassDto.number}-1:0)}">上一页</a>
-								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasNext()}?${ArrangeClassDto.number}+1:${ArrangeClassDto.number})}">下一页</a>
-								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.totalPages}-1)}">尾页</a>
-							</div>
 
-							<!--                    <div class="page">-->
-							<!--                        <div>-->
-							<!--                            <a class="prev" href="">&lt;&lt;</a>-->
-							<!--                            <a class="num" href="">1</a>-->
-							<!--                            <span class="current">2</span>-->
-							<!--                            <a class="num" href="">3</a>-->
-							<!--                            <a class="num" href="">489</a>-->
-							<!--                            <a class="next" href="">&gt;&gt;</a>-->
-							<!--                        </div>-->
-							<!--                    </div>-->
-						</div>
+						<div id="pager"></div>
+
+<!--						<div class="layui-card-body">-->
+<!--							<div style="margin: 0 auto; width: 80%; text-align: center;">-->
+<!--								<p>当前 <span th:text="${ArrangeClassDto.number}+1"></span> 页, 总 <span th:text="${ArrangeClassDto.totalPages}"></span> 页, 共 <span th:text="${ArrangeClassDto.totalElements}"></span> 条记录</p>-->
+<!--								<a th:href="@{${path}}">首页</a>-->
+<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.hasPrevious()}?${ArrangeClassDto.number}-1:0)}">上一页</a>-->
+<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.hasNext()}?${ArrangeClassDto.number}+1:${ArrangeClassDto.number})}">下一页</a>-->
+<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.totalPages}-1)}">尾页</a>-->
+<!--							</div>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
 		</div>
-		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script th:inline="javascript">
+			$(function () {
+				var layer = layui.layer,
+						laypage = layui.laypage
+				laypage.render({
+					elem: 'pager',
+					layout: ['count', 'prev', 'page', 'next'],
+					curr: parseInt('[[${ArrangeClassDto.number}]]') + 1,
+					count: parseInt('[[${ArrangeClassDto.totalElements}]]'),
+					jump: function (obj, first) {
+						if (!first) {
+							var _str = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+							var _courseName = getUrlParam('courseName')
+							console.log(">>"+_courseName)
+							if (_courseName) {
+								_str += '&courseName=' + _courseName
+							}
+							var _teacherName = getUrlParam('teacherName')
+							if (_teacherName) {
+								_str += '&teacherName=' + _teacherName
+							}
+							var _className = getUrlParam('className')
+							if (_className) {
+								_str += '&className=' + _className
+							}
+							window.location.href = _str
+						}
+					}
+				})
+			})
+			function getUrlParam(name) {
+				var reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)')
+				var r = window.location.search.substr(1).match(reg)
+				if (r != null) return decodeURI(r[2])
+				return null
+			}
+		</script>
 	</body>
 </html>
