--- a/src/main/resources/templates/jichu/timetable_management.html
+++ b/src/main/resources/templates/jichu/timetable_management.html
@@ -1,118 +1,102 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>课程表查看</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-
-</head>
-<style>
-    .text-overflow {
-        display:block;/*内联对象需加*/
-        width:31em;/*指定宽度*/
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-
-    table{
-        width:30em;
-        table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-    }
-    .layui-table th{
-        text-align: center;
-        font-weight: 900;
-    }
-    td{
-        text-align: center;
-        width:100%;
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-</style>
-
-<body>
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body ">
-                    <form class="layui-form layui-col-space5">
-
-
-                        <div class="layui-inline layui-show-xs-block">
-                            <a href="/courseinfo/add" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon"></i>增加</a>
-                        </div>
-                    </form>
-                </div>
-
-                <div class="layui-card-body ">
-                    <table class="layui-table layui-form">
-                        <thead>
-                        <tr>
-
-                            <th>ID</th>
-                            <th>课程名称</th>
-                            <th>课程代码</th>
-                            <th>课程负责人</th>
-                            <th>课程图片</th>
-                            <th>课程介绍</th>
-                            <th>操作</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="courseInfo:${courseInfos.content}">
-
-                            <td th:text="${courseInfo.id}">1</td>
-                            <td th:text="${courseInfo.courseName}">JAVA</td>
-                            <td th:text="${courseInfo.courseCode}">课程代码111</td>
-                            <td th:each="user:${userList}" th:if="${user.getId()}==${courseInfo.teacherId}" th:text="${user.getNickname()}">wen</th>
-                            <td><img th:src="@{'/upload/'+${courseInfo.courseImgurl}}"></td>
-                            <td th:text="${courseInfo.courseIntruduce}">课程介绍</td>
-
-                            <td class="td-manage">
-                                <a th:href="@{|${courseInfo.id}/update|}" class="layui-btn layui-btn-primary layui-bg-red" lay-submit>修改</a>
-                                <a th:href="@{|${courseInfo.id}/delete|}" class="layui-btn layui-btn-primary layui-bg-green" lay-submit>删除</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="layui-card-body ">
-<!--                    <div class="page">-->
-<!--                        <div>-->
-<!--                            <a class="prev" href="">&lt;&lt;</a>-->
-<!--                            <a class="num" href="">1</a>-->
-<!--                            <span class="current">2</span>-->
-<!--                            <a class="num" href="">3</a>-->
-<!--                            <a class="num" href="">489</a>-->
-<!--                            <a class="next" href="">&gt;&gt;</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-                    <div style="margin:0 auto; width: 80%; text-align: center;">
-                        <p>当前 <span th:text="${courseInfos.number}+1"></span> 页,
-                            总 <span th:text="${courseInfos.totalPages}"></span> 页,
-                            共 <span th:text="${courseInfos.totalElements}"></span> 条记录</p>
-                        <a th:href="@{/courseinfo/list}">首页</a>
-                        <a th:href="@{/courseinfo/list(pageNum=${courseInfos.hasPrevious()}?${courseInfos.number}-1:0)}">上一页</a>
-                        <a th:href="@{/courseinfo/list(pageNum=${courseInfos.hasNext()}?${courseInfos.number}+1:${courseInfos.number})}">下一页</a>
-                        <a th:href="@{/courseinfo/list(pageNum=${courseInfos.totalPages}-1)}">尾页</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>课程设置</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<div><button type="button" class="layui-btn layui-btn-sm addBtn">添加课程</button></div>
+			<table class="layui-table layui-form">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>课程名称</th>
+						<th>课程代码</th>
+						<th>课程负责人</th>
+						<th>课程图片</th>
+						<th>课程介绍</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="courseInfo:${courseInfos.content}">
+						<td th:text="${courseInfo.id}"></td>
+						<td th:text="${courseInfo.courseName}"></td>
+						<td th:text="${courseInfo.courseCode}"></td>
+						<td th:each="user:${userList}" th:if="${user.getId()}==${courseInfo.teacherId}" th:text="${user.getNickname()}"></td>
+						<td><img th:src="@{'/upload/'+${courseInfo.courseImgurl}}" /></td>
+						<td th:text="${courseInfo.courseIntruduce}"></td>
+						<td>
+							<button type="button" class="layui-btn layui-btn-sm editBtn" th:data-id="${courseInfo.id}">修改</button>
+							<button type="button" class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${courseInfo.id}">删除</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="pager"></div>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var laypage = layui.laypage,
+					layer = layui.layer
+				laypage.render({
+					elem: 'pager',
+					layout: ['count', 'prev', 'page', 'next'],
+					curr: parseInt('[[${courseInfos.number}]]') + 1,
+					count: parseInt('[[${courseInfos.totalElements}]]'),
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
+					}
+				})
+				$('.addBtn').click(function (e) {
+					e.preventDefault()
+					layer.open({
+						type: 2,
+						title: '添加课程',
+						area: ['500px', '600px'],
+						content: '/courseinfo/add'
+					})
+				})
+				$('.editBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.open({
+						type: 2,
+						title: '修改课程',
+						area: ['500px', '600px'],
+						content: '/courseinfo/' + _id + '/update'
+					})
+				})
+				$('.delBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.confirm('确定删除吗？', function () {
+						window.location.href = '/courseinfo/' + _id + '/delete'
+					})
+				})
+			})
+		</script>
+	</body>
 </html>
