--- a/src/main/resources/templates/kuangjia/frameNoShiro.html
+++ b/src/main/resources/templates/kuangjia/frameNoShiro.html
@@ -60,14 +60,14 @@
 							</dl>
 						</li>
 						<li class="layui-nav-item">
-							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>基础设置</a>
+							<a href="javascript:;"><i class="layui-icon layui-icon-set"></i>基础设置</a>
 							<dl class="layui-nav-child">
 								<dd><a class="to-url" data-url="/courseinfo/list" href="javascript:;">课程设置</a></dd>
 								<dd><a class="to-url" data-url="/arrangeclass/list" href="javascript:;">课程安排</a></dd>
 							</dl>
 						</li>
 						<li class="layui-nav-item">
-							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>权限管理</a>
+							<a href="javascript:;"><i class="layui-icon layui-icon-auz"></i>权限管理</a>
 							<dl class="layui-nav-child">
 								<dd><a class="to-url" data-url="/admin/role/list" href="javascript:;">角色列表</a></dd>
 								<dd><a class="to-url" data-url="/admin/res/list" href="javascript:;">资源列表</a></dd>
