--- a/src/main/resources/templates/home_page/index.html
+++ b/src/main/resources/templates/home_page/index.html
@@ -1,172 +1,172 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
-		<meta name="renderer" content="webkit" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>首页 - 旅游大数据虚拟仿真实验教学平台</title>
-		<link rel="stylesheet" href="../../static/new/css/reset.css" />
-		<link rel="stylesheet" href="../../static/new/css/common.css" />
-		<link rel="stylesheet" href="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.css" />
-		<link rel="stylesheet" href="../../static/new/css/index.css" />
-		<script>
-			var chartsInfo = {
-				1: {
-					data: [
-						{ value: parseInt('[[${kaohenum}]]'), name: '考核模块' },
-						{ value: parseInt('[[${modenum}]]') - parseInt('[[${kaohenum}]]'), name: '实验模块' },
-						{
-							name: '实验总数\n[[${modenum}]]个',
-							value: 0,
-							label: {
-								formatter: '{b}',
-								position: 'center',
-								fontSize: 18,
-								fontWeight: 'bold',
-								align: 'center',
-								lineHeight: 28,
-								color: '#215130'
-							}
-						}
-					]
-				},
-				2: {
-					data: [
-						{ value: parseInt('[[${usernum}]]'), name: '校内人员' },
-						{ value: parseInt('[[${xiaowainum}]]'), name: '校外人员' },
-						{
-							name: '用户总数\n' + (parseInt('[[${usernum}]]') + parseInt('[[${xiaowainum}]]')) + '个',
-							value: 0,
-							label: {
-								formatter: '{b}',
-								position: 'center',
-								fontSize: 18,
-								fontWeight: 'bold',
-								align: 'center',
-								lineHeight: 28,
-								color: '#215130'
-							}
-						}
-					]
-				},
-				3: {
-					data: [
-						{ value: parseInt('[[${passpeople}]]'), name: '通过考核' },
-						{ value: parseInt('[[${studentmodel}]]') - parseInt('[[${passpeople}]]'), name: '未通过考核' },
-						{
-							name: '考核总数\n[[${studentmodel}]]个',
-							value: 0,
-							label: {
-								formatter: '{b}',
-								position: 'center',
-								fontSize: 18,
-								fontWeight: 'bold',
-								align: 'center',
-								lineHeight: 28,
-								color: '#215130'
-							}
-						}
-					]
-				},
-				4: {
-					data: [
-						{ value: parseInt('[[${excellentstu}]]'), name: '高' },
-						{ value: parseInt('[[${qualifiedstu}]]'), name: '中' },
-						{ value: parseInt('[[${unqualifiedstu}]]'), name: '低' },
-						{
-							name: '成绩总数\n[[${allpasspeople}]]份',
-							value: 0,
-							label: {
-								formatter: '{b}',
-								position: 'center',
-								fontSize: 18,
-								fontWeight: 'bold',
-								align: 'center',
-								lineHeight: 28,
-								color: '#215130'
-							}
-						}
-					]
-				}
-			}
-		</script>
-	</head>
-	<body>
-		<div th:include="home_page/header :: common_header"></div>
-		<div class="main-banner">
-			<div class="slide"><img src="../../static/new/images/index_01.jpg" /></div>
-			<div class="slide"><img src="../../static/new/images/index_02.jpg" /></div>
-			<div class="slide"><img src="../../static/new/images/index_03.jpg" /></div>
-		</div>
-		<div class="notice">
-			<p>本平台虚拟实验课程版权归四川旅游学院虚拟仿真实验教学管理平台所有，可供学习参考，未经允许私自盗用用作商业用途将承担法律责任</p>
-		</div>
-		<div class="news-section">
-			<div class="main cl">
-				<div class="news-area">
-					<div class="title-bar">
-						<div class="title">平台动态</div>
-						<a href="/newsinfo/more" class="more">more+</a>
-					</div>
-					<ul class="news-list">
-						<li th:each="news:${newsPageInfo.content}" class="news-item cl">
-							<a th:href="@{|noticeDetails/${news.id}|}" th:title="${news.news_name}">
-								<p th:text="${news.news_name}">这里是一条公告的标题</p>
-								<span th:text="${#dates.format(news.dic_datetime,'yyyy-MM-dd')}">2020-02-02</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="recommend">
-					<div class="title-bar">
-						<div class="title">教学成果</div>
-					</div>
-					<div class="recommend-slide">
-						<div th:each="effect:${effects}" class="slide">
-							<div class="recommend-item">
-								<a th:href="@{|/learningfront/effectDetails/${effect.getId()}|}">
-									<img th:src="${effect.getEffect_imgurl()}" />
-									<p th:text="${effect.getEffect_name()}">教学成果展示</p>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="lessions-section">
-			<div class="main">
-				<div class="lessions-title">课程展示</div>
-				<div class="lessions-slide">
-					<div th:each="courseInfo:${courseInfos}" class="slide">
-						<div class="lession-item">
-							<a href="/choose/course/list">
-								<img th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}" />
-								<p th:text="${courseInfo.getCourseName()}">某某课程</p>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="charts-section">
-			<div class="main">
-				<div class="charts-title">平台统计</div>
-				<div class="charts cl">
-					<div class="chart-item" id="chart1"></div>
-					<div class="chart-item" id="chart2"></div>
-					<div class="chart-item" id="chart3"></div>
-					<div class="chart-item" id="chart4"></div>
-				</div>
-			</div>
-		</div>
-		<footer>
-			<p>copyright © 2020 旅游大数据虚拟仿真实验教学平台</p>
-		</footer>
-		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
-		<script src="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.js"></script>
-		<script src="//cdn.staticfile.org/echarts/4.8.0/echarts.common.min.js"></script>
-		<script src="../../static/new/js/index.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>首页 - 旅游大数据虚拟仿真实验教学平台</title>
+    <link rel="stylesheet" href="../../static/new/css/reset.css"/>
+    <link rel="stylesheet" href="../../static/new/css/common.css"/>
+    <link rel="stylesheet" href="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.css"/>
+    <link rel="stylesheet" href="../../static/new/css/index.css"/>
+    <script>
+        var chartsInfo = {
+            1: {
+                data: [
+                    {value: parseInt('[[${kaohenum}]]'), name: '考核模块'},
+                    {value: parseInt('[[${modenum}]]') - parseInt('[[${kaohenum}]]'), name: '实验模块'},
+                    {
+                        name: '实验总数\n[[${modenum}]]个',
+                        value: 0,
+                        label: {
+                            formatter: '{b}',
+                            position: 'center',
+                            fontSize: 18,
+                            fontWeight: 'bold',
+                            align: 'center',
+                            lineHeight: 28,
+                            color: '#215130'
+                        }
+                    }
+                ]
+            },
+            2: {
+                data: [
+                    {value: parseInt('[[${usernum}]]'), name: '校内人员'},
+                    {value: parseInt('[[${xiaowainum}]]'), name: '校外人员'},
+                    {
+                        name: '用户总数\n' + (parseInt('[[${usernum}]]') + parseInt('[[${xiaowainum}]]')) + '个',
+                        value: 0,
+                        label: {
+                            formatter: '{b}',
+                            position: 'center',
+                            fontSize: 18,
+                            fontWeight: 'bold',
+                            align: 'center',
+                            lineHeight: 28,
+                            color: '#215130'
+                        }
+                    }
+                ]
+            },
+            3: {
+                data: [
+                    {value: parseInt('[[${passpeople}]]'), name: '通过考核'},
+                    {value: parseInt('[[${studentmodel}]]') - parseInt('[[${passpeople}]]'), name: '未通过考核'},
+                    {
+                        name: '考核总数\n[[${studentmodel}]]个',
+                        value: 0,
+                        label: {
+                            formatter: '{b}',
+                            position: 'center',
+                            fontSize: 18,
+                            fontWeight: 'bold',
+                            align: 'center',
+                            lineHeight: 28,
+                            color: '#215130'
+                        }
+                    }
+                ]
+            },
+            4: {
+                data: [
+                    {value: parseInt('[[${excellentstu}]]'), name: '高'},
+                    {value: parseInt('[[${qualifiedstu}]]'), name: '中'},
+                    {value: parseInt('[[${unqualifiedstu}]]'), name: '低'},
+                    {
+                        name: '成绩总数\n[[${allpasspeople}]]份',
+                        value: 0,
+                        label: {
+                            formatter: '{b}',
+                            position: 'center',
+                            fontSize: 18,
+                            fontWeight: 'bold',
+                            align: 'center',
+                            lineHeight: 28,
+                            color: '#215130'
+                        }
+                    }
+                ]
+            }
+        }
+    </script>
+</head>
+<body>
+<div th:include="home_page/header :: common_header"></div>
+<div class="main-banner">
+    <div class="slide"><img src="../../static/new/images/index_01.jpg"/></div>
+    <div class="slide"><img src="../../static/new/images/index_02.jpg"/></div>
+    <div class="slide"><img src="../../static/new/images/index_03.jpg"/></div>
+</div>
+<div class="notice">
+    <p>本平台虚拟实验课程版权归四川旅游学院虚拟仿真实验教学管理平台所有，可供学习参考，未经允许私自盗用用作商业用途将承担法律责任</p>
+</div>
+<div class="news-section">
+    <div class="main cl">
+        <div class="news-area">
+            <div class="title-bar">
+                <div class="title">平台动态</div>
+                <a href="/newsinfo/more" class="more">more+</a>
+            </div>
+            <ul class="news-list">
+                <li th:each="news:${newsPageInfo.content}" class="news-item cl">
+                    <a th:href="@{|noticeDetails/${news.id}|}" th:title="${news.news_name}">
+                        <p th:text="${news.news_name}">这里是一条公告的标题</p>
+                        <span th:text="${#dates.format(news.dic_datetime,'yyyy-MM-dd')}">2020-02-02</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="recommend">
+            <div class="title-bar">
+                <div class="title">教学成果</div>
+            </div>
+            <div class="recommend-slide">
+                <div th:each="effect:${effects}" class="slide">
+                    <div class="recommend-item">
+                        <a th:href="@{|/learningfront/effectDetails/${effect.getId()}|}">
+                            <img th:src="@{'/upload/'+${effect.getEffect_imgurl()}}"/>
+                            <p th:text="${effect.getEffect_name()}">教学成果展示</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="lessions-section">
+    <div class="main">
+        <div class="lessions-title">课程展示</div>
+        <div class="lessions-slide">
+            <div th:each="courseInfo:${courseInfos}" class="slide">
+                <div class="lession-item">
+                    <a href="/choose/course/list">
+                        <img th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}"/>
+                        <p th:text="${courseInfo.getCourseName()}">某某课程</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="charts-section">
+    <div class="main">
+        <div class="charts-title">平台统计</div>
+        <div class="charts cl">
+            <div class="chart-item" id="chart1"></div>
+            <div class="chart-item" id="chart2"></div>
+            <div class="chart-item" id="chart3"></div>
+            <div class="chart-item" id="chart4"></div>
+        </div>
+    </div>
+</div>
+<footer>
+    <p>copyright © 2020 旅游大数据虚拟仿真实验教学平台</p>
+</footer>
+<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+<script src="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.js"></script>
+<script src="//cdn.staticfile.org/echarts/4.8.0/echarts.common.min.js"></script>
+<script src="../../static/new/js/index.js"></script>
+</body>
 </html>
